Har skapat grunden för dokumentet med styling i css:en

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    
+    <div class="content">
+        <div class="side">
+            <div id="error"></div>
+            <form action="/" method="GET">
+                <div>
+                    <label for="name">Namn</label>
+                    <input id="name" name="name" type="text" >
+                </div><br>
+                <div>
+                    <label for="password">Lösenord</label>
+                    <input id="password" name="password" type="text" >
+                </div>
+                <button class="login" type="login">Logga in</button>
+            </form>
+        </div>
+        <div class="main">
+        </div>
+    </div>
 
     <script src="/script.js"></script>
 </body>
