--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
                 </div>
                 <input type="submit" value="Logga in" id="login-form-submit">
+                <input type="submit" value="Logga ut" id="logout-form-submit">
             </form>
         </div>
         <div class="main">
