Fixat så att det sparas i local storage när man lyckats logga in.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filborna Simklubb</title>
+    
     <link rel="stylesheet" href="/css/styles.css">
     
 </head>
@@ -17,13 +18,12 @@
                 <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller lösenord</span></p>
             </div>
 
-
             <form id="login-form">
                 <div>
-                    <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+                    <input type="text" name="user" id="user" class="login-form-field" placeholder="Användarnamn">
                 </div><br>
                 <div>
-                    <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+                    <input type="password" name="pass" id="pass" class="login-form-field" placeholder="Lösenord">
                 </div>
                 <input type="submit" value="Logga in" id="login-form-submit">
                 <div id="box"></div>
@@ -33,6 +33,6 @@
         </div>
     </div>
 
-<script src="script.js" ></script>
+    <script src="script.js" ></script>
 </body>
 </html>
