--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <body>
     <div class="content">
         <div class="side">
-            <h1 id="login-header">Logga in</h1>
+            <h1 id="loginHeader">Logga in</h1>
 
             <div id="login-error-msg-holder">
-                <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller lösenord</span></p>
+                <div>
+                    <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller lösenord</span></p>
+                </div>
+                <div id="header"></div>
             </div>
 
             <form id="login-form">
@@ -29,8 +32,7 @@
                 <div id="box"></div>
             </form>
         </div>
-        <div class="main">
-        </div>
+        <div class="main"></div>
     </div>
 
     <script src="script.js" ></script>
