Lagt till bakgrunddbild. Har även stylat side och main divs kanter och färger.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     
 </head>
 <body>
+    <div id="header">
+    </div>
     <div class="content">
         <div class="side">
-            <h1 id="loginHeader">Logga in</h1>
+            <h1 id="title">Logga in</h1>
 
             <div id="login-error-msg-holder">
                 <div>
                     <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller lösenord</span></p>
                 </div>
-                <div id="header"></div>
+                <div id="loginMsg"></div>
             </div>
 
             <form id="login-form">
