--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filborna Simklubb</title>
-    
+
     <link rel="stylesheet" href="/css/styles.css">
-    
+
 </head>
+
 <body>
     <div id="header">
+        <img src="images/simlogga.png" alt="Simlogga">
     </div>
     <div class="content">
         <div class="side">
@@ -18,7 +21,8 @@
 
             <div id="login-error-msg-holder">
                 <div>
-                    <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller lösenord</span></p>
+                    <p id="login-error-msg">Ogiltigt användarnamn <span id="error-msg-second-line">och/eller
+                            lösenord</span></p>
                 </div>
                 <div id="loginMsg"></div>
             </div>
@@ -34,9 +38,26 @@
                 <div id="box"></div>
             </form>
         </div>
-        <div class="main"></div>
+        <div class="main">
+            <h2>Filbornas Simsällskap - Helsingborg</h2>
+            <p class="textBarMargin"><b><u>Regler</u></b></p>
+            <p class="textBarMargin">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae posuere quam. Vivamus eu
+                tincidunt tellus. Nunc molestie scelerisque ex, id aliquam tellus accumsan vel. Proin ullamcorper tellus
+                eget consectetur aliquam. Nullam vitae lacus ultricies est ornare finibus. Nam ac est tristique massa
+                tincidunt fringilla.
+            </p>
+            <p class="textBarMargin"><br><br><b><u>Nyheter</u></b></p>
+            <p class="textBarMargin">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae posuere quam. Vivamus eu
+                tincidunt tellus.<br>Nunc molestie scelerisque ex, id aliquam tellus accumsan vel. Proin ullamcorper tellus
+                eget consectetur aliquam.
+            </p>
+
+        </div>
     </div>
 
-    <script src="script.js" ></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
