Gjort små ändringar, tagit bort bla onödig opacity.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
             <form id="login-form">
                 <div>
-                    <input type="text" name="user" id="user" class="login-form-field" placeholder="Användarnamn">
+                    <input type="text" id="user" class="login-form-field" placeholder="Användarnamn">
                 </div><br>
                 <div>
-                    <input type="password" name="pass" id="pass" class="login-form-field" placeholder="Lösenord">
+                    <input type="password" id="pass" class="login-form-field" placeholder="Lösenord">
                 </div>
                 <input type="submit" value="Logga in" id="login-form-submit">
                 <div id="box"></div>
