--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="header">
-        <img src="images/simlogga.png" alt="Simlogga">
+        <img src="/images/simlogga.png" alt="Simlogga">
     </div>
     <div class="content">
         <div class="side">
