ändrat länken till css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filborna Simklubb</title>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
     <div id="header">
-        <img src="/images/simlogga.png" alt="Simlogga">
+        <img src="images/simlogga.png" alt="Simlogga">
     </div>
     <div class="content">
         <div class="side">
